--- a/tps/4_a_exercices_pandas_sklearn.ipynb
+++ b/tps/4_a_exercices_pandas_sklearn.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cb02ed95",
+   "id": "184187f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e32ab205",
+   "id": "12ed7497",
    "metadata": {},
    "source": [
     "## Tutoriels \n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be7aa9f7",
+   "id": "26320e30",
    "metadata": {},
    "source": [
     "# Exercices"
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "520a1bd9",
+   "id": "e51b96bc",
    "metadata": {},
    "source": [
     "## 1. Manipulation en `pandas`\n",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1fb76fcf",
+   "id": "d6b87923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2e8bacae",
+   "id": "5ed540a8",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eaa4d92f",
+   "id": "e6226a01",
    "metadata": {},
    "source": [
     "### Question 1.a."
@@ -126,7 +126,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "48ab46ad",
+   "id": "b463c061",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0c38952",
+   "id": "db84a0e9",
    "metadata": {},
    "source": [
     "### Question 1.b"
@@ -328,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "1aeac0ca",
+   "id": "a7471a11",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a94af40",
+   "id": "45872448",
    "metadata": {},
    "source": [
     "### Question 2.a\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fa2c08bb",
+   "id": "dd7d70b7",
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9611eaae",
+   "id": "4e5c287a",
    "metadata": {},
    "source": [
     "### Question 2.b"
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "9c13b42d",
+   "id": "ad1a646f",
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91c5bd4a",
+   "id": "ea8ea716",
    "metadata": {},
    "source": [
     "### Question 3.\n",
@@ -478,14 +478,13 @@
     "    - `25%` : le premier quartile des valeurs non nulles\n",
     "    - `50%` : le deuxieme quartile des valeurs non nulles\n",
     "    - `75%` : le troisieme quartile des valeurs non nulles\n",
-    "    - `max` : le min des valeurs non nulles\n",
-    "    \n"
+    "    - `max` : le min des valeurs non nulles\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "26566cc6",
+   "id": "82966d2f",
    "metadata": {},
    "outputs": [
     {
@@ -521,8 +520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "218691de",
+   "execution_count": 96,
+   "id": "c4f6c8f6",
    "metadata": {},
    "outputs": [
     {
@@ -555,77 +554,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>42905.000000</td>\n",
-       "      <td>42905.000000</td>\n",
-       "      <td>4.218000e+04</td>\n",
-       "      <td>4.290500e+04</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>30.022893</td>\n",
-       "      <td>0.457852</td>\n",
-       "      <td>1.070539e+05</td>\n",
-       "      <td>1.471166e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>23.206570</td>\n",
-       "      <td>71.040460</td>\n",
-       "      <td>7.154036e+05</td>\n",
-       "      <td>2.798714e+08</td>\n",
+       "      <td>-0.001165</td>\n",
+       "      <td>-0.001165</td>\n",
+       "      <td>-0.001185</td>\n",
+       "      <td>-0.001165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
-       "      <td>-54.934100</td>\n",
-       "      <td>-179.590000</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>1.004003e+09</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>17.769400</td>\n",
-       "      <td>-70.568500</td>\n",
-       "      <td>8.212000e+03</td>\n",
-       "      <td>1.250211e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>38.704900</td>\n",
-       "      <td>6.084200</td>\n",
-       "      <td>1.577850e+04</td>\n",
-       "      <td>1.398354e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>46.170600</td>\n",
-       "      <td>34.932800</td>\n",
-       "      <td>3.961325e+04</td>\n",
-       "      <td>1.764392e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
-       "      <td>81.716600</td>\n",
-       "      <td>179.366700</td>\n",
-       "      <td>3.910500e+07</td>\n",
-       "      <td>1.934000e+09</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                lat           lng    population            id\n",
-       "count  42905.000000  42905.000000  4.218000e+04  4.290500e+04\n",
-       "mean      30.022893      0.457852  1.070539e+05  1.471166e+09\n",
-       "std       23.206570     71.040460  7.154036e+05  2.798714e+08\n",
-       "min      -54.934100   -179.590000  0.000000e+00  1.004003e+09\n",
-       "25%       17.769400    -70.568500  8.212000e+03  1.250211e+09\n",
-       "50%       38.704900      6.084200  1.577850e+04  1.398354e+09\n",
-       "75%       46.170600     34.932800  3.961325e+04  1.764392e+09\n",
-       "max       81.716600    179.366700  3.910500e+07  1.934000e+09"
+       "            lat       lng  population        id\n",
+       "count  0.000000  0.000000    0.000000  0.000000\n",
+       "mean   0.000000  0.000000    0.000000  0.000000\n",
+       "std   -0.001165 -0.001165   -0.001185 -0.001165\n",
+       "min   -0.000000 -0.000000         NaN  0.000000\n",
+       "25%    0.000000 -0.000000    0.000000  0.000000\n",
+       "50%    0.000000  0.000000    0.000000  0.000000\n",
+       "75%    0.000000  0.000000    0.000000  0.000000\n",
+       "max    0.000000  0.000000    0.000000  0.000000"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +633,6 @@
     "df = pd.read_csv(\"../data/simplemaps/worldcities.csv\")\n",
     "df.describe()\n",
     "\n",
-    "\n",
     "# EN SQL : \n",
     "## pour les colonnes INTEGER, FLOAT ...\n",
     "## on calculerait COUNT(*), MEAN(*) etc...\n",
@@ -642,50 +640,86 @@
     "def describe_not_pandaesque(df):\n",
     "    \n",
     "    # Filtrer pour ne garder que les variables quantitatives\n",
+    "    df = df.select_dtypes(include=np.number)\n",
     "    \n",
     "    # Itérer sur les fonctions statistiques\n",
+    "    stat_funcs = {\n",
+    "        # count : la longueur de la liste qui contient les valeurs non nulles\n",
+    "        \"count\": lambda s: len([value for value in s if not np.isnan(value)]),\n",
+    "        # La moyenne\n",
+    "        \"mean\": np.nanmean,\n",
+    "        # Ecart type\n",
+    "        \"std\": np.nanstd,\n",
+    "        # Min\n",
+    "        \"min\": np.nanmin,\n",
+    "        # Percentile 25\n",
+    "        \"25%\": lambda s: np.nanpercentile(s, 25),\n",
+    "        # Percentile 50\n",
+    "        \"50%\": lambda s: np.nanpercentile(s, 50),\n",
+    "        # Percentile 75\n",
+    "        \"75%\": lambda s: np.nanpercentile(s, 75),   \n",
+    "        # Max\n",
+    "        \"max\": np.nanmax\n",
+    "    }\n",
+    "    \n",
+    "    # Calcule des statistics\n",
+    "    statistics = []\n",
+    "    for func in stat_funcs.values() :\n",
+    "        row = []\n",
     "        # Calculer chacune des lignes (en itérant sur les variables) et la stocker dans une liste\n",
+    "        for variable in df.columns:\n",
+    "            stat = func(df[variable])\n",
+    "            row.append(stat)\n",
+    "        statistics.append(row)\n",
     "        \n",
     "    # Créer une DataFrame à partir de ces données\n",
     "    # Spécifier les bons noms de colonnes et d'index\n",
-    "    \n",
-    "    pass\n",
+    "    statistics = pd.DataFrame(\n",
+    "        statistics,\n",
+    "        index=stat_funcs.keys(),\n",
+    "        columns=df.columns\n",
+    "        \n",
+    "    )\n",
+    "    return statistics\n",
     "\n",
     "\n",
     "def describe_pandaesque(df):\n",
     "    pass\n",
-    "    \n",
-    "    \n",
-    "    "
+    "\n",
+    "df_describe = describe_not_pandaesque(df)\n",
+    "# Variation relative = (exp - th) / th\n",
+    "# experimentale = la nôtre df_describe\n",
+    "# théorique = celle de pandas\n",
+    "\n",
+    "# Toutes les valeurs ont 0% d'écart \n",
+    "# sauf les écart types qui ont autour de 0.0012 % d'écart\n",
+    "100 * (df_describe - df.describe()) / df.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "27b67d2c",
+   "execution_count": 91,
+   "id": "295ebd08",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# df.describe()[\"id\"].loc[\"std\"] * (df.describe()[\"id\"].loc[\"count\"] / (df.describe()[\"id\"].loc[\"count\"]-1)) - df_describe[\"id\"].loc[\"std\"] "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b39e66e1",
+   "execution_count": 92,
+   "id": "9806408a",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "35079d7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# df.describe()[\"id\"].loc[\"count\"]\n",
+    "df.describe()[\"id\"].loc[\"std\"]"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "6f233e49",
+   "id": "6d223154",
    "metadata": {},
    "source": [
     "## 2. Régression linéaire simple : comparaison\n",
@@ -697,20 +731,26 @@
     "\n",
     "On a généré ci-dessous un nuage de points, on a représenté $Y$ en fonction de $X$.\n",
     "\n",
-    "L'objectif de la régression linéaire simple est de trouver deux coefficients $a$ et $b$ tels que :\n",
+    "L'objectif de la régression linéaire simple sans intercepte est de trouver deux coefficients $a$ et $b$ tels que :\n",
+    "\n",
+    "$$ Y = ax  + err $$\n",
+    "\n",
+    "\n",
+    "L'objectif de la régression linéaire simple avec intercepte est de trouver deux coefficients $a$ et $b$ tels que :\n",
     "\n",
     "$$ Y = ax + b + err $$\n",
     "\n",
     "\n",
     "1. Entraîner un modèle de régression linéaire entre $x$ et $y$ avec `scikit-learn`\n",
     "2. Entraîner un modèle de régression linéaire entre $x$ et $y$ avec `statsmodels` (on pourra s'aider de StackoVerflow)\n",
-    "3. Entraîner un modèle de régression linéaire entre $x$ et $y$ en remarquant que le coefficient $a$ est égale à $\\frac{Cov(X, Y)}{Var(X}$ (on pourra chercher comment calculer la covariance et la variance en `pandas` ou `numpy`)."
+    "3. Entraîner un modèle de régression linéaire entre $x$ et $y$ en remarquant que le coefficient $a$ est égale à $\\frac{Cov(X, Y)}{Var(X}$ (on pourra chercher comment calculer la covariance et la variance en `pandas` ou `numpy`).\n",
+    "4. Créer une colonne `y_pred` qui contient les prédictions pour toutes les données à disposition"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "52648e82",
+   "id": "08edc2a7",
    "metadata": {},
    "outputs": [
     {
@@ -751,36 +791,42 @@
   },
   {
    "cell_type": "markdown",
-   "id": "805ce725",
+   "id": "634af4d2",
    "metadata": {},
    "source": [
     "## 3. Git\n",
     "\n",
     "1. Créer un repository vide sous le nom de `projet_data_<numero_du_groupe>` \n",
-    "2. Ajouter l'utilisateur `Selimmmm` (4 m).\n",
-    "3. Ajouter le notebook suivant dans un dossier exercice et pousser sur la branche remote"
+    "2. Ajouter l'utilisateur `Selimmmm` (il y a 4 m).\n",
+    "3. Ajouter le notebook suivant dans un dossier exercice et pousser sur la branche remote\n",
+    "4. Ajouter l'URL complète du repository de votre groupe : \n",
+    "    - https://docs.google.com/spreadsheets/d/18WxnG-luwRS6C-djbpl-gTyQgorBaQLqBdLq2nGiPLY/edit#gid=0"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f32621f0",
+   "id": "bc5b1d72",
    "metadata": {},
    "source": [
     "## 4. Manipulation data avec `SQL` (ou `MongoDb`)\n",
     "\n",
-    "**SCALINGO !!!! Avec `sqlaclhemy` emplacer 'postgres' par 'postgresql' dans l'URL de la BDD.**\n",
-    "\n",
     "On reprend la situation de l'exercice 2.\n",
     "\n",
-    "1. Créer une DataFrame qui contient en colonnes `x`, `y` et `y_pred` et insérer les données dans une table SQL / une collection MongoDB sur Scalingo (la table / la collection doit être distante)\n",
+    "**Il faut au préalable :**\n",
+    "- avoir créé un compte sur Scalingo\n",
+    "- avoir provisionné une app sur Scalingo\n",
+    "- avoir provisionné en addon une base SQL (ou MongoDB) avec le plan Starter (gratuit)\n",
+    "- avoir activé l'option 'Internet Accessibility' (sinon pas d'accessibilité hors réseau interne Scalingo)\n",
     "\n",
-    "2. Modèles chaînés ... + prédire tous les jours"
+    "1. Pour le modèle de votre choix, créer une DataFrame qui contient en colonnes `x`, `y` et `y_pred` et insérer les données dans une table SQL / une collection MongoDB sur Scalingo (la table / la collection doit être distante). On pourra utiliser `pandas.to_sql`\n",
+    "\n",
+    "2. Lire les données de la table créée. On pourra utiliser `pd.read_sql`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "67f51068",
+   "id": "4497d78b",
    "metadata": {},
    "outputs": [],
    "source": []
